<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center_horizontal"
             android:paddingTop="56dp"
             android:paddingBottom="56dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             tools:context="sheyko.aleksey.restsurvey.QuizFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoImageView"
        android:scaleType="centerInside"
        android:background="@drawable/logo_sample"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionTextView"
        android:text="@string/question_sample"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/buttonGreat"
        android:text="@string/button_great_label"
        style="@style/ChoiceButton"/>

    <Button
        android:id="@+id/buttonGood"
        android:text="@string/button_good_label"
        style="@style/ChoiceButton"/>

    <Button
        android:id="@+id/buttonOkay"
        android:text="@string/button_okay_label"
        style="@style/ChoiceButton"/>

    <Button
        android:id="@+id/buttonBad"
        android:text="@string/button_bad_label"
        style="@style/ChoiceButton"/>

</LinearLayout>
